--- a/no-framework/todoList.html
+++ b/no-framework/todoList.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light" style="background-color: #E3FDFD;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDoList</title>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    
+    <h1 class="title is-1">To Do List</h1>
+    <div class="box">
+        <div id="app">
+            <input type="text" v-model="newTodo" @keyup.enter="addTodo" placeholder="Add a new task">
+            <p>Press enter after typing your task.</p>
+            <ul>
+              <li v-for="(todo, index) in todos" :key="index">
+                {{ todo }}
+                <button @click="removeTodo(index)">REMOVE</button>
+              </li>
+            </ul>
+        </div>
+        <script>
+            const app = Vue.createApp({
+              data() {
+                return {
+                  newTodo: '',
+                  todos: []
+                };
+              },
+              methods: {
+                addTodo() {
+                  if (this.newTodo.trim() !== '') {
+                    this.todos.push(this.newTodo.trim());
+                    this.newTodo = '';
+                  }
+                },
+                removeTodo(index) {
+                  this.todos.splice(index, 1);
+                }
+              }
+            });
+        
+            app.mount('#app');
+        </script>
+    </div>
 </body>
 </html>
